# meeting-ingest

./: .gitignore  AGENTS.md  CLAUDE.md  CURRENT-QUESTIONS.md  DECISIONS.md  README.md  pyproject.toml
.iq-context/: AGENT-INSTRUCTIONS.md  config.yaml  project-state.json
docs/: artifact-contract.md  claude-code-review-prompt.md  context-primer.md  current-output-evaluation.md  design-proposal.md  implementation-plan.md  personal-workflow-scope.md  product-status.md  provider-handoff-contract.md  session-provider-host-wrappers.md  session-provider-inbox-agent-workflow.md  session-provider-subagent-prompt.md  stakeholder-playbook-design.md
docs/assumptions/: README.md
docs/claude-agents/: meeting-ingest-session-provider.md
docs/decisions/: 2026-07-20T05-59-52-871Z-default-decision-1.md  README.md  iq-context-source-control-policy.md
docs/discoveries/: README.md
docs/sessions/: README.md  (+29 more)
scripts/: build-approved-runtime.py  install-approved-skill.py  publish-approved-runtime.py
tests/: conftest.py  test_anthropic_provider.py  test_cli_scaffold.py  test_config_paths.py  test_doctor_status.py  test_errors_clock.py  test_extract.py  test_hashing_ids.py  test_identity.py  test_ledger.py  test_locking.py  test_pipeline_ingest.py  test_playbook.py  test_playbook_cleanup.py  test_playbook_review.py  test_playbook_status.py  test_provider_registry.py  test_provider_render.py  test_readiness.py  test_repair_date.py  test_runtime.py  test_runtime_build.py  test_runtime_config.py  test_runtime_release.py  test_session_inbox.py  test_signals.py  test_stakeholders.py
(+111 files in other folders)
